--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sk devloper</title>
+    <title>responsive with bootstrap</title>
     <!-- CSS only -->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -244,7 +244,7 @@
     </section>
     <footer style="margin-bottom:0;" class="mt-5 mb-0">
         <p style="margin-bottom: 0; font-size: 1rem; margin-left: 0; margin-right: 0; margin-top: 0;"
-            class="text-center display-4 bg-dark text-light py-3">&copy2021 All right reserved</p>
+            class="text-center display-4 bg-dark text-light py-3">&copy2022 All right reserved</p>
     </footer>
 
 
